[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cutlass-sycl"
version = "0.5.0"
description = "CUTLASS-SYCL"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
  "networkx",
  "numpy",
  "pydot",
  "scipy",
  "treelib"
]

[project.urls]
"Homepage" = "https://github.com/intel/cutlass-sycl"
"Bug Tracker" = "https://github.com/intel/cutlass-sycl/issues"
