[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SYCL*TLA"
version = "0.5.0"
description = "SYCL* Templates for Linear Algebra"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
  "networkx",
  "numpy",
  "pydot",
  "scipy",
  "treelib"
]

[project.urls]
"Homepage" = "https://github.com/intel/sycl-tla"
"Bug Tracker" = "https://github.com/intel/sycl-tla/issues"
